--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,8 @@
 <div class="wrapper">
-  <%= render "side_bar" %>
-  <%= render "main" %>
+  <div class="side-bar">
+    <%= render "side_bar" %>
+  </div>
+  <div class="main">
+    <%= render "main" %>
+  </div>
 </div>
